--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:V+GpyO4jNfPYukW3MkjPItm9lwWr0G2O/JbMWexGWFM=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=dipinjamin
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -44,3 +44,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FCM_SERVER_KEY=my_secret_server_key
+FCM_SENDER_ID=my_secret_sender_id
+
+CLOUDINARY_URL=cloudinary://535469657761821:QIZAXBqq-7Uq5PBsv2Fzc8X9B3g@ditvtch0c
