--- a/.env.example
+++ b/.env.example
@@ -45,7 +45,7 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-FCM_SERVER_KEY=my_secret_server_key
-FCM_SENDER_ID=my_secret_sender_id
+FCM_SERVER_KEY=AAAAVYCpo4o:APA91bEnueUEFWAj_qnw_tyACf4m7Kr-J2LO6aSpW2-KQKNiptrrhJETOykMv8l9JNccchANuxZ3QrRlFDsWA24uAajQpa6puvB-3XRZ7IVE7iC5Lk9J9hkhz9CEY4Xe6aewDV7XjHVW
+FCM_SENDER_ID=367230821258
 
 CLOUDINARY_URL=cloudinary://535469657761821:QIZAXBqq-7Uq5PBsv2Fzc8X9B3g@ditvtch0c
